--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,12 +78,12 @@ if (ASTR_ADD_INSTALL)
 
 # include gnudirs and add installation of the header file of the astr library
     include(GNUInstallDirs)
-    install(TARGETS astr EXPORT astrTargets INCLUDES DESTINATION "${CMAKE_INSTALL_DATADIR}")
+    install(TARGETS astr EXPORT astrTargets INCLUDES DESTINATION "${CMAKE_INSTALL_LIBDIR}")
     install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
     install(EXPORT astrTargets
         FILE astrTargets.cmake
         NAMESPACE a4z::
-        DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake/${PROJECT_NAME}"
+        DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
     )
     include(CMakePackageConfigHelpers)
     write_basic_package_version_file(
@@ -93,13 +93,13 @@ if (ASTR_ADD_INSTALL)
     configure_package_config_file(
         ${CMAKE_CURRENT_LIST_DIR}/cmake/astrConfig.cmake.in
         ${CMAKE_CURRENT_BINARY_DIR}/astrConfig.cmake
-        INSTALL_DESTINATION "share/cmake/${PROJECT_NAME}"
+        INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
     )
     install(
         FILES
             ${CMAKE_CURRENT_BINARY_DIR}/astrConfig.cmake
             ${CMAKE_CURRENT_BINARY_DIR}/astrConfigVersion.cmake
-        DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake/${PROJECT_NAME}"
+        DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
     )
 
 endif()
